<resources>
    <string name="app_name">HarcaPaylas</string>

    <string name="welcome_username">Hoşgeldin %s</string>

    <string name="placeholder_email">E-Posta Giriniz</string>
    <string name="placeholder_username">Takma Ad Giriniz</string>
    <string name="placeholder_password">Şifre Giriniz</string>

    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="second_register">Hemen Kayıt Ol!</string>
    <string name="second_login">Giriş Yap!</string>

    <string name="enter_group_name">Grup adı giriniz..</string>
    <string name="join">Katıl</string>
    <string name="new_group">Yeni Grup</string>
    <string name="my_groups">Gruplarım :</string>
    <string name="placeholder_add_report">Harcama Bildir</string>

    <string name="placeholder_group_item_title">%s</string>
    <string name="placeholder_price">₺ %s</string>
    <string name="placeholder_group">Grup : %s</string>
    <string name="placeholder_transaction_details">Harcama Detayları</string>
    <string name="placeholder_empty_total_price">Toplam Harcama : ₺ 0</string>
    <string name="placeholder_empty_count_price">Hesapla</string>
    <string name="placeholder_total_price">Toplam Harcama : ₺ %s</string>
    <string name="enter_valid_groupname">Lütfen geçerli bir grup adı giriniz!</string>


    <string name="ok">Tamam</string>
    <string name="cancel">İptal</string>

    <string name="add_report_warning_title">Bilgiler Eksik</string>
    <string name="add_report_warning_message">Harcama bildirimi eklemek için açıklama ve tutar bilgilerini eksiksiz doldurmalısınız!</string>
    <string name="add_report_success_title">İşlem Başarılı!</string>
    <string name="add_report_success_message">Harcama bildirimi başarıyla eklendi!</string>
    <string name="register_success_title">Kayıt Başarılı!</string>
    <string name="register_success_message">Başarılı bir şekilde kayıt oldunuz. Lütfen giriş yapınız!</string>
    <string name="exit_group_title">Gruptan Çık</string>
    <string name="exit_group_message">%s grubundan çıkmak üzeresiniz. Bunu yapmak istediğinize emin misiniz?</string>
</resources>