<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.login.LoginActivity">
    <include
        android:id="@+id/activityLoginAppBar"
        layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/loginHeaderText"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="35sp"
            android:textColor="@color/facebook_blue"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:hint="@string/placeholder_username"
            android:inputType="text"
            android:textAlignment="center"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnAction"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="0dp"
            android:background="@color/facebook_blue"
            android:textColor="@color/md_white_1000"
            android:layout_weight="1"
            android:layout_marginEnd="2.5dp"
            android:text="@string/login"
            tools:ignore="ButtonStyle" />
        <TextView
            android:id="@+id/btnChangeAction"
            android:text="@string/second_register"
            android:layout_marginTop="15dp"
            android:textColor="@color/facebook_blue"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>